force-app/main/default/objects/Account_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Plans can only be created for Parent Accounts</errorMessage>
        <filterItems>
            <field>Account.RecordTypeName__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>