force-app/main/default/objects/Account_Plan__c/fields/Last_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Date__c</fullName>
    <label>Last Meeting Date</label>
    <type>Date</type>
</CustomField>